Fixing layout issues

--- a/style.css
+++ b/style.css
@@ -74,9 +74,9 @@ body {
 #main .text-section {
     position: relative;
     color: var(--bright-font);
-    padding: calc(var(--default-padding) * 2);
-    padding-top: calc(var(--default-padding) * 2);
-    padding-bottom: calc(var(--default-padding) * 4);
+    padding: calc(var(--default-padding) * 2) calc(var(--default-padding) * 3);
+    /* padding-top: calc(var(--default-padding) * 2);
+    padding-bottom: calc(var(--default-padding) * 4); */
     background-color: #6A6476A0;
     box-shadow: inset 0 0 8px 2px #00000030;
 }
@@ -230,6 +230,7 @@ body {
 .question_block {
     text-align: center;
     padding: 15px;
+    padding-bottom: 30px;
 }
 
 .question_block p {
